--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>Bloc Base Project</title>
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/home.css">
 </head>
 <body>
-    <h4>Hello, World???</h4>
+  <div class="main-sidebar">
+    <h1 class="main-title">Bloc Chat</h1>
     <ui-view></ui-view>
-
+  </div>
 
     <!-- Angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
@@ -39,5 +41,7 @@
 
      <!-- Application Files -->
     <script src="/scripts/app.js"></script>
+    <script src="/scripts/controllers/HomeCtrl.js"></script>
+    <script src="/scripts/services/Room.js"></script>
 </body>
 </html>
