chkpnt4 list messages: complete

--- a/app/index.html
+++ b/app/index.html
@@ -2,20 +2,21 @@
 <html ng-app="blocChat">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Bloc Base Project</title>
+    <title>Bloc Chat</title>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/home.css">
 
 </head>
-<body ng-controller="ModalCtrl as modal">
-  <div class="main-sidebar">
+<body>
+  <div class="main-sidebar" ng-controller="ModalCtrl as modal">
     <header>
       <h1 class="main-title">Bloc Chat</h1>
       <button type="button" ng-click="modal.openModal()" class="new-room-button">New room</button>
     </header>
     <ui-view></ui-view>
   </div>
+
 
 
 
@@ -62,5 +63,6 @@
     <script src="/scripts/controllers/HomeCtrl.js"></script>
     <script src="/scripts/controllers/ModalCtrl.js"></script>
     <script src="/scripts/services/Room.js"></script>
+    <script src="/scripts/services/Message.js"></script>
 </body>
 </html>
