--- a/app/index.html
+++ b/app/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html ng-app="blocChat">
 <head lang="en">
-    <meta charset="UTF-8">
-    <title>Bloc Chat</title>
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
+    <title>Dragon Chat</title>
+    <link href="https://fonts.googleapis.com/css?family=Contrail+One|Marcellus+SC" rel="stylesheet">
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/home.css">
-
 </head>
+
 <body>
-  <div class="main-sidebar" ng-controller="ModalCtrl as modal">
+  <div class="main-sidebar">
     <header>
-      <h1 class="main-title">Bloc Chat</h1>
-      <button type="button" ng-click="modal.openModal()" class="new-room-button">New room</button>
+      <div class="hero title-1"><img src="/assets/images/dragonhero.png"></div>
+      <button type="button" ng-click="modal.openModal()" class="new-room-button" ng-controller="ModalCtrl as modal">New room</button>
     </header>
     <ui-view></ui-view>
   </div>
