mentor meeting updates added

--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,8 @@
      firebase.initializeApp(config);
      </script>
 
+     <script src="https://cdn.rawgit.com/Luegg/angularjs-scroll-glue/master/src/scrollglue.js"></script>
+
 
      <!-- Application Files -->
     <script src="/scripts/app.js"></script>
